@@ -1,3 +1,8 @@
+2006-02-15  Roland Dreier  <rdreier@cisco.com>
+
+	* src/verbs.c (mthca_create_qp): Update to add new response and
+	response size parameters for libibverbs ibv_cmd_create_qp().
+
 2006-02-14  Roland Dreier  <rdreier@cisco.com>
 
 	* Release version 1.0-rc6.
